<resources>
    <string name="app_name">Eleventh Hour</string>
    <string name="help_page" translatable="false">http://nas2skupa.com/</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_top">Top offers</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">My profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_sign_out">Sign out</string>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="menu_sale">Sale</string>

    <!-- Activity and fragment titles -->
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_calendar">My bookings</string>
    <string name="title_fragment_favorites">Favorite providers</string>
    <string name="title_fragment_top">Top offers</string>
    <string name="title_activity_map">Map</string>

    <!-- Categories -->
    <string name="category_health">Health</string>
    <string name="category_repair">Repair</string>
    <string name="category_beauty">Beauty</string>
    <string name="category_intellect">Intellect</string>
    <string name="category_home">Home</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_travel">Travel</string>
    <string name="category_transport">Transport</string>
    <string name="category_fun">Fun</string>


    <!-- SignInActivity -->
    <string name="sign_in_signing_in">Signing in…</string>
    <string name="sign_in_signing_out">Signing out…</string>
    <string name="sign_in_create_account">Create account</string>
    <string name="sign_in_forgot_password">Forgot password?</string>

    <!-- SignInFragment -->
    <string name="sign_in_username_or_email">Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_action">Sign in</string>
    <string name="sign_in_with_social_account">Or simply sign in using your social account</string>
    <string name="msg_sign_in_wrong_credentials">Wrong username or password.</string>
    <string name="msg_sign_in_error">Sorry, we are unable to sign you in at the moment. Please try again later.</string>
    <string name="msg_sign_in_no_network">You need network access to sign in.</string>
    <string name="msg_sign_in_google_failed">Sorry, there was a problem signing you in with your Google account. Please try again later.</string>

    <!-- RegisterFragment -->
    <string name="register_display_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_action">Create account</string>
    <string name="msg_register_error">Sorry, we are unable to create your account. Please try again later.</string>
    <string name="msg_register_user_already_exists">User with that email already exists.</string>
    <string name="msg_register_user_already_exists_action">Forgot password?</string>
    <string name="msg_register_no_network">You need network access to sign up.</string>
    <string name="msg_register_invalid_display_name">Name must be at least 3 characters long.</string>
    <string name="msg_register_invalid_email">Please enter valid email address.</string>
    <string name="msg_register_invalid_password">Password must be at least 6 characters long</string>

    <!-- ForgotPasswordFragment -->
    <string name="forgot_password_email">Email</string>
    <string name="forgot_password_action">Send email</string>
    <string name="msg_forgot_password">Enter your email address and we will send you a link to reset your password.</string>
    <string name="msg_forgot_password_success">We have sent you an email with the password reset link.</string>
    <string name="msg_forgot_password_user_does_not_exist">User with that email is not registered.</string>
    <string name="msg_forgot_password_user_does_not_exist_action">Create account</string>
    <string name="msg_forgot_password_fail">Sending email has failed. Please check that your email address is correct.</string>

    <!-- CategoryActivity -->
    <string name="category_pick_a_subcategory">Pick a subcategory</string>

    <!-- ServicesFragment -->
    <string name="msg_booking_failed">Sorry, your booking did not go through. Please try again later.</string>

    <!-- MakeBookingDialog -->
    <string name="make_booking_action">Book now</string>
    <string name="make_booking_cancel">Cancel</string>
    <string name="confirmation_text" formatted="false">Do you want to make a booking on %s from %s to %s?</string>
    <string name="note_to_provider">Note to provider</string>

    <!-- BookingStatus -->
    <string name="booking_status_pending">Waiting confirmation</string>
    <string name="booking_status_confirmed">Confirmed︎</string>
    <string name="booking_status_rejected">Rejected</string>
    <string name="booking_status_canceled">Canceled</string>
    <string name="booking_status_finished">Finished</string>
    <string name="booking_status_unknown">Unknown</string>

    <!-- CalendarFragment -->
    <string name="msg_booking_cancel_failed">Sorry, your booking couldn\'t be canceled at the moment. Please try again later.</string>

    <!-- BookingDetailsDialog -->
    <string name="cancel_booking">Cancel booking</string>
    <string name="tap_for_directions">Tap me for directions!</string>

    <!-- ProviderActivity -->
    <string name="provider_removed">Provider %s is no longer available!</string>

</resources>
