<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    style="@style/AppTheme.SignInTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:theme="@style/AppTheme.SignInTheme"
    tools:background="@drawable/splash_background"
    tools:layout="@layout/activity_sign_in">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_email"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_username_or_email"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:text="ranko.munk@gmail.com" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/text_password"
            style="@style/SignInInputFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="ranko123" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/SignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_action" />

    <Button
        android:id="@+id/button_register"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_sign_in"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_in_create_account" />

    <Button
        android:id="@+id/button_forgot_password"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_sign_in"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/sign_in_forgot_password" />

    <FrameLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@+id/button_forgot_password"
        android:layout_marginTop="16dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_progress"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_with_social_account"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead.Inverse" />

    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_google_plus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:tint="#ccffffff"
            app:srcCompat="@drawable/google_plus_box" />

        <ImageView
            android:id="@+id/button_facebook"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:tint="#ccffffff"
            app:srcCompat="@drawable/facebook_box" />

        <ImageView
            android:id="@+id/button_twitter"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:tint="#ccffffff"
            app:srcCompat="@drawable/twitter_box" />
    </LinearLayout>

</RelativeLayout>
