<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.HomeFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="category_card"
        app:layout_constraintBottom_toBottomOf="@+id/card_repair"
        app:layout_constraintLeft_toLeftOf="@+id/card_intellect"
        app:layout_constraintRight_toLeftOf="@+id/card_repair"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_health"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:transitionName="category_icon"
                android:scaleType="fitXY"
                android:src="@drawable/category_health"
                app:srcCompat="@drawable/category_health"
                android:background="@color/category_health" />

            <TextView
                android:id="@+id/txt_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:transitionName="category_title"
                android:text="@string/category_health"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/card_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_repair"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_repair" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_repair"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_beauty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/card_repair"
        app:layout_constraintRight_toRightOf="@+id/card_leisure">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_beauty"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_beauty" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_beauty"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_intellect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/card_home"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_intellect"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_intellect" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_intellect"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_home" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_home"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_leisure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/card_home"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_leisure"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_leisure" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_leisure"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/card_intellect"
        app:layout_constraintTop_toTopOf="@+id/card_transport">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_travel"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_travel" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_travel"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_transport"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_transport" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_transport"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/card_leisure"
        app:layout_constraintTop_toTopOf="@+id/card_transport">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_fun"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:scaleType="fitXY"
                android:src="@drawable/category_fun" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_fun"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
